fix: decrease padding on small screens

--- a/src/styles/objects.scss
+++ b/src/styles/objects.scss
@@ -40,3 +40,54 @@
     border-bottom-color: #266d4d;
   }
 }
+
+.pokemon-image {
+  display: none;
+
+  @media screen and (min-width: 1024px) {
+    display: unset;
+    position: absolute;
+    height: 120px;
+    top: 68px;
+    left: 80px;
+  }
+
+  @media screen and (min-width: 1360px) {
+    height: 160px;
+  }
+
+  @media screen and (min-width: 1440px) {
+    height: 180px;
+    left: 120px;
+  }
+
+  @media screen and (min-width: 1920px) {
+    height: 200px;
+    left: 160px;
+  }
+}
+
+.pokemon-types {
+  display: flex;
+  justify-content: center;
+
+  & > .type + .type {
+    margin-left: 20px;
+  }
+}
+
+.type-detail {
+  padding: 32px 0;
+
+  &:first-child {
+    padding-top: 0;
+  }
+
+  &:last-child {
+    padding-bottom: 0;
+  }
+
+  &:not(:last-child) {
+    border-bottom: 1px solid #C4C4C4;
+  }
+}
